flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-deployment
  labels:
    app: echoserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: echoserver
        image: 846446731115.dkr.ecr.eu-central-1.amazonaws.com/echoserver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
