flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    run: echoserver-deployment
spec:
  selector:
    app: echoserver-deployment
  ports:
    - protocol: TCP
      port: 5000
  type: LoadBalancer
